#525 javax.xml.bind, fix dispatcher tests